--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-core": "6.4.5",
     "babel-eslint": "5.0.0-beta6",
     "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
     "babel-preset-stage-0": "6.3.13",
     "eslint": "1.10.3",
     "eslint-config-standard": "4.4.0",
