--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "redux-queue-offline-listener",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Network listener for redux-queue-offline",
   "keywords": [],
-  "main": "lib/index.js",
+  "main": "lib/web.js",
   "files": [
     "lib"
   ],
@@ -13,20 +13,17 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "babel": "6.3.26",
-    "babel-cli": "6.4.5",
-    "babel-core": "6.4.5",
-    "babel-eslint": "5.0.0-beta6",
-    "babel-preset-es2015": "6.3.13",
-    "babel-preset-react": "6.3.13",
-    "babel-preset-stage-0": "6.3.13",
-    "eslint": "1.10.3",
-    "eslint-config-standard": "4.4.0",
-    "eslint-plugin-standard": "1.3.1"
+    "babel-cli": "6.24.1",
+    "babel-core": "6.24.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "standard": "10.0.2"
   },
   "scripts": {
-    "test": "make test",
-    "prepublish": "make clean build"
+    "build": "(rm -rf lib || true) && babel src --out-dir lib",
+    "test": "standard",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
